Closed Bug 31539 Opened 25 years ago Closed 24 years ago

links in NN4 have property named text for content while Moz hasn't

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: martin.honnen, Assigned: jst)

Details

(Whiteboard: [nsbeta3+])

Links (A HREF elements) in NN4 have a property
  text
which reflects the text content of the link e.g.
 <A HREF="http://www.kibo.com"
    ONCLICK="alert(this.text ); 
             return false;"
 >Kibology for all</A>
would return
  Kibology for all
For compatibility reasons I think Mozilla/NN5 should support that property too. 
IE4+ doesn't have it but provides innerText for all elements therefore not 
having the need to provide it.
Needed for 4.x compatibility. The fix is very low risk. Nominating for nsbeta3.
Status: NEW → ASSIGNED
Keywords: nsbeta3
correctness & compatibility with JavaScript 1.0 in use since Nav2. Very
important to be backwardly compatible with this most basic JavaScript, and very
low risk.
Keywords: 4xp, correctness
Summary: links in NN4 have property named text for content while NN5 hasn't → links in NN4 have property named text for content while Moz hasn't
Reassigning to myself, aiming for M18...
Assignee: vidur → jst
Status: ASSIGNED → NEW
OS: Windows 98 → All
Hardware: PC → All
Target Milestone: --- → M18
Marking nsbeta3+.
Status: NEW → ASSIGNED
Whiteboard: [nsbeta3+]
This is now fixed.

Marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verified with 2000-09-13-09.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.