Fixing nsbeta3+ bug 31539. Adding support for the 4.x DOM property 'text' on links. r=pollmann@netscape.com